@@ -56,6 +56,20 @@
   </data>
 </rule>
 
+<!-- misc -->
+<rule>
+  <class name="GtkFileSelection">
+    <method>GetSelections</method>
+  </class>
+  <data>
+    <attribute target="return">
+     <name>array</name>
+     <value>1</value>
+    </attribute>
+ </data>
+</rule>
+
+
 <!-- constructor collision hints -->
 <rule>
   <class name="GtkButton">
