@@ -9,5 +9,5 @@ gtk+-2.0.3
 libgnome-2.0.1
 libgnomecanvas-2.0.1
 libgnomeui-2.0.1
-gtkhtml: cvs branch gnome-2-port files gtkhtml.[ch], gtkhtml-types.h and
-	gtkhtml-enums.h
+gtkhtml: cvs branch gnome-2-port files gtkhtml.[ch], gtkhtml-types.h,
+	gtkhtml-enums.h, gtkhtml-stream.[ch]
