@@ -1,3 +1,14 @@
+2002-07-17  Rachel Hestilow  <hestilow@ximian.com>
+
+	* generator/Method.cs: Honor array in return type.
+
+	* parser/Gtk.metadata: Tag FileSelection.GetSelections as array.
+	* parser/Metadata.pm: Add "return" target.
+
+	* parser/gtkhtml, parser/README: Add gtkhtml-stream.[ch].
+	Needed for url-requested signal. The actual wrapper for this
+	compiles but is badly borked, it will probably need a lot of love.
+	
 2002-07-16  Mike Kestner <mkestner@speakeasy.net>
 
 	* generator/ClassBase.cs : make MarshalType virtual.
